--- a/index.html
+++ b/index.html
@@ -696,7 +696,15 @@
 
 
 
- 
+
+
+
+
+
+
+
+
+
 <section id="education" class="section">
   <div class="max-w-7xl">
     <h2 class="orbitron section-title">
@@ -710,11 +718,11 @@
       <!-- Bachelor's Degree -->
       <div class="project-card">
         <div class="degree-left">
-          <img src="./graphics/ioelogo.png" alt="WRC Logo" class="degree-logo">
+          <img src="./graphics/ioelogo.png" alt="WRC" class="degree-logo">
           <p class="degree-period">2022 - Present</p>
         </div>
         <div class="degree-right">
-          <h4 class="degree-title orbitron">Bachelor of Technology in Computer Engineering</h4>
+          <h4 class="degree-title orbitron">Bachelors in Electrical Engineering</h4>
           <p class="scholarship-text orbitron">🏆 IOE Merit-Based Scholarship Recipient</p>
           <p class="institution-text orbitron">Institute of Engineering-Pashchimanchal Campus</p>
         </div>
@@ -826,6 +834,10 @@
     margin: 0 auto;
   }
 
+  #education .orbitron {
+    font-family: 'Orbitron', sans-serif;
+  }
+
   #education .section-title {
     display: flex;
     align-items: center;
@@ -836,20 +848,18 @@
     letter-spacing: 0.125rem;
     margin-bottom: 3.125rem;
     text-transform: uppercase;
-    font-family: 'Orbitron', sans-serif;
   }
 
   #education .status-indicator {
     width: 0.75rem;
     height: 0.75rem;
     border-radius: 50%;
-    display: inline-block;
     animation: pulse 2s infinite;
   }
 
   #education .status-active {
-    background: linear-gradient(180deg, var(--accent-cyan), var(--accent-green));
-    box-shadow: 0 0 0.75rem rgba(29, 209, 161, 0.6);
+    background: var(--accent-cyan); /* Simplified from gradient */
+    box-shadow: 0 0 0.5rem rgba(29, 209, 161, 0.6);
   }
 
   @keyframes pulse {
@@ -864,7 +874,6 @@
     letter-spacing: 0.09375rem;
     text-align: center;
     font-weight: 600;
-    font-family: 'Orbitron', sans-serif;
   }
 
   #education .degrees-container {
@@ -874,40 +883,22 @@
   }
 
   #education .project-card {
-    background: linear-gradient(135deg, rgba(30, 41, 59, 0.4), rgba(15, 23, 42, 0.6));
-    border: 1px solid rgba(59, 130, 246, 0.2);
+    background: rgba(30, 41, 59, 0.5); /* Simplified background */
+    border: 1px solid var(--primary-blue);
     padding: 1.75rem;
     border-radius: 0.75rem;
     display: flex;
     gap: 1.75rem;
     align-items: center;
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(10px);
-    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 0.3s ease, background 0.3s ease, transform 0.3s ease;
     position: relative;
     overflow: hidden;
   }
 
-  #education .project-card::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0.1875rem;
-    background: linear-gradient(90deg, var(--accent-cyan), var(--primary-blue));
-    opacity: 0;
-    transition: opacity 0.4s ease;
-  }
-
   #education .project-card:hover {
-    border-color: var(--accent-cyan);
-    transform: translateY(-0.3125rem);
-    box-shadow: 0 1rem 2.5rem rgba(29, 209, 161, 0.25);
-  }
-
-  #education .project-card:hover::before {
-    opacity: 1;
+    border-color: var(--primary-blue);
+    background: rgba(59, 130, 246, 0.1); /* Precomputed RGBA */
+    transform: scale(1.05);
   }
 
   #education .degree-left {
@@ -923,16 +914,14 @@
     height: 6.25rem;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid var(--accent-cyan);
-    box-shadow: 0 0.5rem 1.25rem rgba(29, 209, 161, 0.3);
-    transition: all 0.3s ease;
+    border: 2px solid var(--accent-cyan); /* Reduced border thickness */
     background: white;
     padding: 0.25rem;
+    transition: transform 0.3s ease;
   }
 
   #education .project-card:hover .degree-logo {
     transform: scale(1.05);
-    box-shadow: 0 0.75rem 1.875rem rgba(29, 209, 161, 0.5);
   }
 
   #education .degree-period {
@@ -956,7 +945,6 @@
     color: #e6eef9;
     letter-spacing: 0.03125rem;
     line-height: 1.3;
-    font-family: 'Orbitron', sans-serif;
   }
 
   #education .institution-text {
@@ -964,7 +952,6 @@
     color: #cbd5e1;
     line-height: 1.6;
     font-weight: 500;
-    font-family: 'Orbitron', sans-serif;
   }
 
   #education .scholarship-text {
@@ -973,18 +960,16 @@
     padding: 0.5rem 1rem;
     border-radius: 1.25rem;
     align-self: flex-start;
-    background: linear-gradient(135deg, rgba(29, 209, 161, 0.15), rgba(10, 181, 123, 0.1));
-    border: 1px solid rgba(29, 209, 161, 0.3);
+    background: rgba(29, 209, 161, 0.15); /* Simplified background */
+    border: 1px solid var(--accent-cyan);
     color: var(--accent-cyan);
-    box-shadow: 0 0.25rem 0.75rem rgba(29, 209, 161, 0.1);
     font-weight: 600;
     letter-spacing: 0.01875rem;
-    transition: all 0.3s ease;
-    font-family: 'Orbitron', sans-serif;
+    transition: background 0.3s ease, border-color 0.3s ease;
   }
 
   #education .project-card:hover .scholarship-text {
-    background: linear-gradient(135deg, rgba(29, 209, 161, 0.25), rgba(10, 181, 123, 0.15));
+    background: rgba(29, 209, 161, 0.25);
     border-color: var(--accent-cyan);
   }
 
@@ -1000,16 +985,17 @@
   }
 
   #education .cert-card {
+    border: 1px solid var(--primary-blue);
     border-radius: 0.75rem;
     overflow: hidden;
     background: white;
-    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.15);
+    transition: border-color 0.3s ease, background 0.3s ease, transform 0.3s ease;
   }
 
   #education .cert-card:hover {
-    transform: translateY(-0.5rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
+    border-color: var(--primary-blue);
+    background: rgba(59, 130, 246, 0.1); /* Precomputed RGBA */
+    transform: scale(1.05); /* Simplified to scale only */
   }
 
   #education .cert-top {
@@ -1049,440 +1035,6 @@
     font-weight: 700;
     color: #1e293b;
     margin-bottom: 0.375rem;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .cert-provider {
-    font-size: 0.875rem;
-    color: #64748b;
-    font-weight: 500;
-  }
-
-  #education .cta-container {
-    text-align: center;
-    margin-top: 3.75rem;
-  }
-
-  #education .cta-btn {
-    display: inline-block;
-    background: linear-gradient(135deg, var(--primary-blue), var(--accent-cyan));
-    color: #fff;
-    padding: 1rem 2.5rem;
-    border-radius: 0.5rem;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1rem;
-    transition: all 0.3s ease;
-    box-shadow: 0 0.5rem 1.25rem rgba(59, 130, 246, 0.3);
-    letter-spacing: 0.0625rem;
-    text-transform: uppercase;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .cta-btn:hover {
-    transform: translateY(-0.125rem);
-    box-shadow: 0 0.75rem 1.875rem rgba(59, 130, 246, 0.5);
-  }
-
-  @media (max-width: 64rem) {
-    #education .certifications-grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-
-  @media (max-width: 48rem) {
-    #education .section-title { font-size: 1.75rem; }
-    #education .subsection-title { font-size: 1.25rem; }
-    #education .project-card {
-      flex-direction: row;
-      gap: 1.25rem;
-      align-items: flex-start;
-      padding: 1.25rem;
-    }
-    #education .degree-left { flex: 0 0 6.25rem; }
-    #education .degree-logo { width: 5rem; height: 5rem; }
-    #education .degree-period { font-size: 0.75rem; }
-    #education .degree-title { font-size: 1.25rem; }
-    #education .certifications-grid { grid-template-columns: 1fr; }
-  }
-
-  @media (max-width: 30rem) {
-    #education .project-card {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    #education .degree-left { gap: 0.75rem; align-items: center; }
-    #education .degree-right { width: 100%; align-items: center; }
-    #education .scholarship-text { align-self: center; }
-  }
-</style>
-
-
-
-
-
-
-
-
-<section id="education" class="section">
-  <div class="max-w-7xl">
-    <h2 class="orbitron section-title">
-      <span class="status-indicator status-active"></span>
-      ACADEMICS
-    </h2>
-
-    <!-- Degrees Section -->
-    <h3 class="subsection-title orbitron">Degrees Received</h3>
-    <div class="degrees-container">
-      <!-- Bachelor's Degree -->
-      <div class="project-card">
-        <div class="degree-left">
-          <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College" class="degree-logo">
-          <p class="degree-period">2022 - Present</p>
-        </div>
-        <div class="degree-right">
-          <h4 class="degree-title orbitron">Bachelor of Technology in Computer Engineering</h4>
-          <p class="scholarship-text orbitron">🏆 IOE Merit-Based Scholarship Recipient</p>
-          <p class="institution-text orbitron">Institute of Engineering-Pashchimanchal Campus</p>
-        </div>
-      </div>
-
-      <!-- Higher Secondary -->
-      <div class="project-card">
-        <div class="degree-left">
-          <img src="./assets/education/sos_logo.png" alt="SOS Hermann Gmeiner" class="degree-logo">
-          <p class="degree-period">2020 - 2022</p>
-        </div>
-        <div class="degree-right">
-          <h4 class="degree-title orbitron">Higher Secondary Education (Science)</h4>
-          <p class="scholarship-text orbitron">🏆 Academic Excellence Scholarship Recipient</p>
-          <p class="institution-text orbitron">SOS Hermann Gmeiner Higher Secondary School</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Certifications Section -->
-    <div class="certifications-section">
-      <h3 class="subsection-title orbitron">Professional Certifications</h3>
-      <div class="certifications-grid">
-        <div class="cert-card">
-          <div class="cert-top cert-top--stanford">
-            <img src="./assets/education/stanford_logo.png" alt="Stanford" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Machine Learning</h4>
-            <p class="cert-provider">Andrew Ng</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--deep-learning">
-            <img src="./assets/education/deep_learning_logo.png" alt="Deep Learning" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Deep Learning Specialization</h4>
-            <p class="cert-provider">Andrew Ng</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--google">
-            <img src="./assets/education/google_logo.png" alt="Google Cloud" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Machine Learning on GCP</h4>
-            <p class="cert-provider">Google Cloud Training</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--ibm">
-            <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Data Science Professional</h4>
-            <p class="cert-provider">IBM</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--microsoft">
-            <img src="./assets/education/microsoft_logo.png" alt="Microsoft" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Big Data Analytics</h4>
-            <p class="cert-provider">Microsoft</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--ibm-advanced">
-            <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Advanced Data Science</h4>
-            <p class="cert-provider">IBM</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Call to Action -->
-    <div class="cta-container">
-      <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Education%20Details" class="cta-btn orbitron">
-        Request Education Details
-      </a>
-    </div>
-  </div>
-</section>
-
-<style>
-  /* Scoped CSS variables and base styles for #education section */
-  #education {
-    --primary-blue: #3b82f6;
-    --primary-blue-rgb: 59, 130, 246;
-    --accent-cyan: #1dd1a1;
-    --accent-green: #0ab57b;
-    font-family: 'Arial', sans-serif;
-    color: #e2e8f0;
-    padding: 3.75rem 1.25rem;
-    background: transparent; /* Inherit parent background */
-  }
-
-  #education .max-w-7xl {
-    max-width: 68.75rem;
-    margin: 0 auto;
-  }
-
-  #education .section-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.75rem;
-    font-size: 2.25rem;
-    font-weight: 700;
-    letter-spacing: 0.125rem;
-    margin-bottom: 3.125rem;
-    text-transform: uppercase;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .status-indicator {
-    width: 0.75rem;
-    height: 0.75rem;
-    border-radius: 50%;
-    display: inline-block;
-    animation: pulse 2s infinite;
-  }
-
-  #education .status-active {
-    background: linear-gradient(180deg, var(--accent-cyan), var(--accent-green));
-    box-shadow: 0 0 0.75rem rgba(29, 209, 161, 0.6);
-  }
-
-  @keyframes pulse {
-    0%, 100% { transform: scale(1); }
-    50% { transform: scale(0.95); }
-  }
-
-  #education .subsection-title {
-    margin-bottom: 1.875rem;
-    font-size: 1.5rem;
-    color: var(--accent-cyan);
-    letter-spacing: 0.09375rem;
-    text-align: center;
-    font-weight: 600;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .degrees-container {
-    margin-top: 1.875rem;
-    display: grid;
-    gap: 1.875rem;
-  }
-
-  #education .project-card {
-    background: linear-gradient(135deg, rgba(30, 41, 59, 0.4), rgba(15, 23, 42, 0.6));
-    border: 1px solid var(--primary-blue);
-    padding: 1.75rem;
-    border-radius: 0.75rem;
-    display: flex;
-    gap: 1.75rem;
-    align-items: center;
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(10px);
-    transition: all 0.3s ease;
-    position: relative;
-    overflow: hidden;
-  }
-
-  #education .project-card::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0.1875rem;
-    background: linear-gradient(90deg, var(--accent-cyan), var(--primary-blue));
-    opacity: 0;
-    transition: opacity 0.4s ease;
-  }
-
-  #education .project-card:hover {
-    border-color: var(--primary-blue);
-    background: rgba(var(--primary-blue-rgb), 0.1);
-    transform: scale(1.05);
-    box-shadow: 0 1rem 2.5rem rgba(29, 209, 161, 0.25);
-  }
-
-  #education .project-card:hover::before {
-    opacity: 1;
-  }
-
-  #education .degree-left {
-    flex: 0 0 8.125rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.75rem;
-  }
-
-  #education .degree-logo {
-    width: 6.25rem;
-    height: 6.25rem;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 3px solid var(--accent-cyan);
-    box-shadow: 0 0.5rem 1.25rem rgba(29, 209, 161, 0.3);
-    transition: all 0.3s ease;
-    background: white;
-    padding: 0.25rem;
-  }
-
-  #education .project-card:hover .degree-logo {
-    transform: scale(1.05);
-    box-shadow: 0 0.75rem 1.875rem rgba(29, 209, 161, 0.5);
-  }
-
-  #education .degree-period {
-    font-size: 0.875rem;
-    color: #94a3b8;
-    text-align: center;
-    font-weight: 500;
-    letter-spacing: 0.03125rem;
-  }
-
-  #education .degree-right {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-  }
-
-  #education .degree-title {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #e6eef9;
-    letter-spacing: 0.03125rem;
-    line-height: 1.3;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .institution-text {
-    font-size: 1rem;
-    color: #cbd5e1;
-    line-height: 1.6;
-    font-weight: 500;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .scholarship-text {
-    display: inline-block;
-    font-size: 0.9rem;
-    padding: 0.5rem 1rem;
-    border-radius: 1.25rem;
-    align-self: flex-start;
-    background: linear-gradient(135deg, rgba(29, 209, 161, 0.15), rgba(10, 181, 123, 0.1));
-    border: 1px solid rgba(29, 209, 161, 0.3);
-    color: var(--accent-cyan);
-    box-shadow: 0 0.25rem 0.75rem rgba(29, 209, 161, 0.1);
-    font-weight: 600;
-    letter-spacing: 0.01875rem;
-    transition: all 0.3s ease;
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  #education .project-card:hover .scholarship-text {
-    background: linear-gradient(135deg, rgba(29, 209, 161, 0.25), rgba(10, 181, 123, 0.15));
-    border-color: var(--accent-cyan);
-  }
-
-  #education .certifications-section {
-    margin-top: 5rem;
-  }
-
-  #education .certifications-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.875rem;
-    margin-top: 1.875rem;
-  }
-
-  #education .cert-card {
-    border: 1px solid var(--primary-blue);
-    border-radius: 0.75rem;
-    overflow: hidden;
-    background: white;
-    transition: all 0.3s ease;
-    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.15);
-  }
-
-  #education .cert-card:hover {
-    border-color: var(--primary-blue);
-    background: rgba(var(--primary-blue-rgb), 0.1);
-    transform: translateY(-0.5rem) scale(1.05);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
-  }
-
-  #education .cert-top {
-    padding: 2.5rem 1.25rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 8.75rem;
-  }
-
-  #education .cert-top--stanford { background: #dc2626; }
-  #education .cert-top--deep-learning { background: #374151; }
-  #education .cert-top--google { background: #10b981; }
-  #education .cert-top--ibm { background: #ef4444; }
-  #education .cert-top--microsoft { background: #3b82f6; }
-  #education .cert-top--ibm-advanced { background: #f97316; }
-
-  #education .cert-logo {
-    width: 4.375rem;
-    height: 4.375rem;
-    object-fit: contain;
-    transition: transform 0.3s ease;
-  }
-
-  #education .cert-card:hover .cert-logo {
-    transform: scale(1.1);
-  }
-
-  #education .cert-bottom {
-    padding: 1.25rem;
-    background: #f8fafc;
-    border-top: 1px solid #e2e8f0;
-  }
-
-  #education .cert-title {
-    font-size: 1.125rem;
-    font-weight: 700;
-    color: #1e293b;
-    margin-bottom: 0.375rem;
-    font-family: 'Orbitron', sans-serif;
   }
 
   #education .cert-provider {
@@ -1505,10 +1057,9 @@
     text-decoration: none;
     font-weight: 700;
     font-size: 1rem;
-    transition: all 0.3s ease;
+    transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
     letter-spacing: 0.0625rem;
     text-transform: uppercase;
-    font-family: 'Orbitron', sans-serif;
   }
 
   #education .cta-btn:hover {
@@ -1553,8 +1104,10 @@
 
 
 
-
   
+
+
+
 
 
   
@@ -5717,6 +5270,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
