--- a/index.html
+++ b/index.html
@@ -502,12 +502,11 @@
 
 
 
-
 <!-- HTML SECTION -->
 <section id="hero" class="hero-section-wrapper">
-  <div class="hero-background-container">
+  <div class="hero-background-box">
     <div class="hero-background-overlay"></div>
-    <div class="hero-content-grid">
+    <div class="hero-content-container">
       <!-- Left Content Area -->
       <div class="hero-left-content">
         <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
@@ -559,7 +558,7 @@
       <!-- Right Profile Image Area -->
       <div class="hero-right-content">
         <div class="profile-image-container">
-          <img src=".graphics/profile.jpg" alt="Dipesh Poudel" class="profile-image">
+          <img src="graphics/profile.jpg" alt="Dipesh Poudel" class="profile-image" onerror="this.style.border='3px solid #ff0000'; this.alt='Image not found: graphics/profile.jpg'">
           <div class="profile-frame"></div>
         </div>
       </div>
@@ -569,26 +568,35 @@
 
 <!-- CSS STYLES -->
 <style>
-/* Hero Section Container - Isolated to prevent affecting other sections */
+/* Hero Section Container - Completely isolated */
 .hero-section-wrapper {
   position: relative;
   width: 100%;
   margin: 0;
-  padding: 0;
-  overflow: hidden;
-  isolation: isolate; /* Creates new stacking context */
+  padding: 80px 0 60px 0; /* Top padding for fixed header */
+  overflow: visible;
+  isolation: isolate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
 }
 
-.hero-background-container {
+/* Main Box Container with visible border */
+.hero-background-box {
   position: relative;
-  width: 100%;
-  min-height: 100vh;
-  background-image: url('.graphics/power2.jpg');
+  width: 95%;
+  max-width: 1600px;
+  margin: 0 auto;
+  background-image: url('graphics/power2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 60px 40px;
+  border: 4px solid #00f3ff;
+  box-shadow: 0 0 40px rgba(0, 243, 255, 0.4);
+  padding: 50px 40px;
   box-sizing: border-box;
+  min-height: 90vh;
 }
 
 .hero-background-overlay {
@@ -597,174 +605,207 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.8);
   z-index: 1;
 }
 
-.hero-content-grid {
+.hero-content-container {
   position: relative;
   z-index: 2;
   max-width: 1400px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 400px;
-  gap: 60px;
-  align-items: start;
+  grid-template-columns: 1.2fr 450px;
+  gap: 50px;
+  align-items: center;
+  justify-items: center;
 }
 
 /* Left Content Styling */
 .hero-left-content {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 25px;
+  width: 100%;
+  justify-content: center;
 }
 
 .hero-title {
-  font-size: 4rem;
+  font-size: 4.5rem;
   font-weight: 700;
   color: #00f3ff;
-  text-shadow: 0 0 20px rgba(0, 243, 255, 0.6);
-  letter-spacing: 0.1em;
+  text-shadow: 0 0 30px rgba(0, 243, 255, 0.8);
+  letter-spacing: 0.15em;
   margin: 0;
   line-height: 1.2;
+  text-align: center;
 }
 
 .hero-subtitle-enhanced {
-  font-size: 1.5rem;
-  line-height: 1.8;
-  color: #e0e0e0;
+  font-size: 1.75rem;
+  line-height: 2;
+  color: #ffffff;
   font-weight: 400;
-  margin: 0;
-  text-align: justify;
-  max-width: 900px;
-  letter-spacing: 0.02em;
+  margin: 20px 0;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
 }
 
 .hero-quote {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-style: italic;
   color: #00f3ff;
-  margin: 10px 0;
-  text-shadow: 0 0 10px rgba(0, 243, 255, 0.4);
+  margin: 15px 0;
+  text-align: center;
+  text-shadow: 0 0 15px rgba(0, 243, 255, 0.6);
 }
 
 /* Info Boxes Grid */
 .hero-info-boxes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 25px;
-  margin-top: 20px;
+  gap: 20px;
+  margin-top: 30px;
+  width: 100%;
 }
 
 .hud-element {
   position: relative;
-  background: rgba(0, 20, 40, 0.85);
+  background: rgba(0, 20, 40, 0.9);
   border: 2px solid #00f3ff;
-  padding: 24px 20px;
+  padding: 28px 18px;
   text-align: center;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(8px);
   transition: all 0.3s ease;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .hud-element:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 30px rgba(0, 243, 255, 0.3);
+  transform: translateY(-8px);
+  box-shadow: 0 15px 40px rgba(0, 243, 255, 0.4);
   border-color: #00ffff;
+  background: rgba(0, 30, 50, 0.95);
 }
 
 .hud-title {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 700;
   color: #00f3ff;
-  margin-bottom: 15px;
-  letter-spacing: 0.05em;
+  margin-bottom: 18px;
+  letter-spacing: 0.08em;
+  text-shadow: 0 0 10px rgba(0, 243, 255, 0.5);
 }
 
 .hud-item {
-  font-size: 0.95rem;
-  color: #b0b0b0;
-  margin-top: 8px;
-  line-height: 1.5;
+  font-size: 1rem;
+  color: #d0d0d0;
+  margin-top: 10px;
+  line-height: 1.6;
+  text-align: center;
 }
 
 /* HUD Corner Decorations */
 .hud-corner {
   position: absolute;
-  width: 15px;
-  height: 15px;
-  border: 2px solid #00f3ff;
+  width: 18px;
+  height: 18px;
+  border: 3px solid #00f3ff;
 }
 
 .hud-corner.tl {
-  top: -2px;
-  left: -2px;
+  top: -3px;
+  left: -3px;
   border-right: none;
   border-bottom: none;
 }
 
 .hud-corner.tr {
-  top: -2px;
-  right: -2px;
+  top: -3px;
+  right: -3px;
   border-left: none;
   border-bottom: none;
 }
 
 .hud-corner.bl {
-  bottom: -2px;
-  left: -2px;
+  bottom: -3px;
+  left: -3px;
   border-right: none;
   border-top: none;
 }
 
 .hud-corner.br {
-  bottom: -2px;
-  right: -2px;
+  bottom: -3px;
+  right: -3px;
   border-left: none;
   border-top: none;
 }
 
 /* Right Profile Image Section */
 .hero-right-content {
-  position: sticky;
-  top: 80px;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  width: 100%;
 }
 
 .profile-image-container {
   position: relative;
   width: 100%;
-  max-width: 400px;
+  max-width: 420px;
 }
 
 .profile-image {
   width: 100%;
   height: auto;
   display: block;
-  border: 3px solid #00f3ff;
-  box-shadow: 0 0 30px rgba(0, 243, 255, 0.5);
+  border: 4px solid #00f3ff;
+  box-shadow: 0 0 40px rgba(0, 243, 255, 0.6);
   position: relative;
   z-index: 2;
+  background: rgba(0, 20, 40, 0.5);
 }
 
 .profile-frame {
   position: absolute;
-  top: -10px;
-  left: -10px;
-  right: -10px;
-  bottom: -10px;
-  border: 2px solid #00f3ff;
-  opacity: 0.5;
+  top: -12px;
+  left: -12px;
+  right: -12px;
+  bottom: -12px;
+  border: 3px solid #00f3ff;
+  opacity: 0.4;
   z-index: 1;
   pointer-events: none;
 }
 
 /* Responsive Design */
-@media (max-width: 1200px) {
-  .hero-content-grid {
-    grid-template-columns: 1fr 350px;
+@media (max-width: 1400px) {
+  .hero-content-container {
+    grid-template-columns: 1fr 400px;
     gap: 40px;
+  }
+  
+  .hero-title {
+    font-size: 4rem;
+  }
+  
+  .hero-subtitle-enhanced {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero-background-box {
+    width: 95%;
+    padding: 40px 30px;
+  }
+  
+  .hero-content-container {
+    grid-template-columns: 1fr 350px;
+    gap: 35px;
   }
   
   .hero-title {
@@ -772,24 +813,30 @@
   }
   
   .hero-subtitle-enhanced {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+  }
+  
+  .profile-image-container {
+    max-width: 350px;
   }
 }
 
 @media (max-width: 992px) {
-  .hero-content-grid {
+  .hero-section-wrapper {
+    padding: 100px 0 60px 0;
+  }
+  
+  .hero-content-container {
     grid-template-columns: 1fr;
-    gap: 50px;
+    gap: 40px;
   }
   
   .hero-right-content {
-    position: relative;
-    top: 0;
     order: -1;
   }
   
   .profile-image-container {
-    max-width: 300px;
+    max-width: 350px;
     margin: 0 auto;
   }
   
@@ -797,45 +844,70 @@
     grid-template-columns: 1fr;
     gap: 20px;
   }
+  
+  .hud-element {
+    min-height: auto;
+  }
 }
 
 @media (max-width: 768px) {
-  .hero-background-container {
-    padding: 40px 20px;
+  .hero-background-box {
+    width: 95%;
+    padding: 30px 20px;
+    border: 3px solid #00f3ff;
   }
   
   .hero-title {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
   }
   
   .hero-subtitle-enhanced {
-    font-size: 1.1rem;
-    text-align: left;
+    font-size: 1.3rem;
+    line-height: 1.8;
   }
   
   .hero-quote {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
   
   .hud-element {
-    padding: 20px 15px;
+    padding: 22px 15px;
   }
   
   .hud-title {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
   
   .hud-item {
-    font-size: 0.85rem;
+    font-size: 0.95rem;
+  }
+  
+  .profile-image-container {
+    max-width: 300px;
   }
 }
 
 @media (max-width: 480px) {
+  .hero-section-wrapper {
+    padding: 80px 0 40px 0;
+  }
+  
+  .hero-background-box {
+    width: 95%;
+    padding: 25px 15px;
+  }
+  
   .hero-title {
-    font-size: 2rem;
+    font-size: 2.2rem;
+    letter-spacing: 0.1em;
   }
   
   .hero-subtitle-enhanced {
+    font-size: 1.1rem;
+    line-height: 1.7;
+  }
+  
+  .hero-quote {
     font-size: 1rem;
   }
   
@@ -844,7 +916,6 @@
   }
 }
 </style>
-
 
 
 
@@ -4619,6 +4690,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
